# boutique_production_sync_v2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose-production.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
common/: logger.py  pyproject.toml  settings.py  utils.py
common/exceptions/: app_exceptions.py  bitrix24.py  database.py  entities.py  enums.py  file.py  settings.py
converter/: Dockerfile  pyproject.toml
converter/src/: main.py
converter/src/core/: logger.py  settings.py
converter/src/db/: redis_client.py
converter/src/services/: converter_files.py  tasks.py
infra/: nginx.conf
price_flow/: Dockerfile  pyproject.toml
price_flow/src/: alembic.ini  main.py
price_flow/src/admin/: admin_models.py  authenticate.py  base_admin.py  mixins.py
price_flow/src/api/: deps.py  health_checker.py
price_flow/src/core/: __init__.py  exceptions.py  logger.py  settings.py
price_flow/src/db/: database.py  factory.py  postgres.py  sql_scripts.py  sqlite_manager.py
price_flow/src/middleware/: execution_time_middleware.py
price_flow/src/migration/: env.py
price_flow/src/models/: supplier_models.py
price_flow/src/repositories/: clothing_codes_repo.py  supplier_clothing_repo.py  supplier_codes_repo.py  supplier_product_codes_repo.py
price_flow/src/schemas/: converter_schemas.py  response_schemas.py  supplier_schemas.py
price_flow/src/services/: converter.py  file_service.py  file_uploader.py  helpers.py
updating_sites/: Dockerfile  README copy.md  README.md  pyproject.toml
updating_sites/src/: main.py
updating_sites/src/api/v1/: dropbox.py  storage.py  tiny_admin.py  update_portal.py  upload_file.py
updating_sites/src/core/: exceptions.py  logger.py  settings.py
updating_sites/src/services/: dropbox_.py  helper.py  portals.py  storage.py  token_cipher.py
(+30 files in other folders)
