[tool.poetry]
name = "updating_sites"
version = "0.1.0"
description = ""
authors = ["Vladimir Nagibin <vlnagibin@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
pydantic-settings = "2.6.1"
pydantic = "2.10.5"
black = "^24.10.0"
python-multipart = "0.0.20"
sshtunnel = "0.4.0"
paramiko = "2.12.0"
SQLAlchemy = "2.0.32"
PyMySQL = "1.1.1"
pandas = "2.2.2"
dropbox = "12.0.2"
python-dotenv = "1.0.1"
aiofile = "3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
force_grid_wrap = 0
use_parentheses = true
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
# asyncio_mode=auto
norecursedirs = "env/* venv/*"
addopts = [
    "-vv",
    "-p",
    "no:cacheprovider",
    "--strict-markers",
]
testpaths = "functional/"
python_files = "test_*.py"
markers = [
    "test",
    "core"
]

[tool.mypy]
# Строгая типизация
strict = true
# explicit_package_bases = true
# namespace_packages = true

# ВАЖНО: проверяем ТОЛЬКО свой проект
mypy_path = "updating_sites/src"
files = ["src"]

# ИСКЛЮЧАЕМ другие проекты монорепозитория
exclude = [
    "^price_flow/.*",
    "^converter/.*",
    "^src/migrations/.*",
    "^migrations/.*",
]

# Плагин pydantic
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Игнорируем недостающие типы для внешних библиотек
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "openpyxl.*",
    "sqladmin.*",
    "python_json_logger.*",
    "apscheduler.*",
    "uvicorn.*",
]
ignore_missing_imports = true
